@@ -996,17 +996,9 @@ GSM_Error ATGEN_ParseReply(GSM_StateMachine *s, const unsigned char *input, cons
 							buffer[strlen(buffer) - 2] = 0;
 						}
 						smprintf(s, "Parsed Samsung string \"%s\"\n", buffer);
-						error = ATGEN_DecodeText(s,
-								buffer, strlen(buffer),
-								out_s, storage_size,
-								true, false);
-						if (error == ERR_NONE) {
-							smprintf(s, "Samsung string decoded as \"%s\"\n", DecodeUnicodeString(out_s));
-						}
+						DecodeUTF8(out_s, buffer, strlen(buffer));
+						smprintf(s, "Samsung string decoded as \"%s\"\n", DecodeUnicodeString(out_s));
 						free(buffer);
-						if (error != ERR_NONE) {
-							goto end;
-						}
 						inp += length;
 						break;
 					case 'r':
